# CTF-Web-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  orchestrator.py  prompts.py  state.py
src/browser/: __init__.py  controller.py  extractors.py  payloads.py  tools.py
src/models/: __init__.py  ollama_client.py  vision.py
src/utils/: __init__.py  flag_detector.py  hitl.py  logger.py
tests/: __init__.py  test_config.py  test_flag_detector.py
